# llvm-instrumentation

./: .gitignore  CMakeLists.txt  README.md
headers/: InstructionCount.h  InstrumentationFunctions.h  PassUtilities.h
src/: CMakeLists.txt  InstructionCount.cpp  InstrumentationFunctions.cpp  Makefile  PassUtilities.cpp  PostInstrumentationPass.cpp  instrument.py  instrumentationCode_new.c  link.sh
test/: test.txt
